<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <item
        android:id="@+id/menu_clear"
        android:icon="@drawable/clear"
        android:title="@string/string_clear"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_undo"
        android:icon="@drawable/undo"
        android:title="@string/string_undo"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_redo"
        android:icon="@drawable/redo"
        android:title="@string/string_redo"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_size"
        android:orderInCategory="99"
        android:title="@string/change"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_color"
        android:orderInCategory="99"
        android:title="@string/Mcolor"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/save"
        android:title="@string/string_save"
        app:showAsAction="always" />

</menu>
