<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/fine_tip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/ftp"
        app:srcCompat="@drawable/fine_tip" />

    <ImageButton
        android:id="@+id/norm_tip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/normal"
        app:srcCompat="@drawable/normal_tip" />

    <ImageButton
        android:id="@+id/big"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/big"
        app:srcCompat="@drawable/big_tip" />

    <Button
        android:id="@+id/custom_button"
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="Custom" />

</LinearLayout>